# jet

./: .gitignore  Architecture.md  Cargo.toml  README.md  install.sh
.devcontainer/: devcontainer.json
.github/workflows/: remote-benchmark.yml
crates/jet-cli/: Cargo.toml
crates/jet-cli/src/: main.rs
crates/jet-core/: Cargo.toml
crates/jet-core/src/: backend.rs  chunk_cache.rs  chunking.rs  commit_store.rs  engine.rs  error.rs  lib.rs  manifest_index.rs  object_store.rs  repo.rs  trace.rs  workspace.rs
crates/jet-proto/: Cargo.toml  build.rs
crates/jet-proto/proto/: jet_remote.proto
crates/jet-proto/src/: lib.rs
crates/jet-remote/: Cargo.toml
crates/jet-remote/src/: lib.rs  trace.rs
crates/jet-server/: Cargo.toml
crates/jet-server/src/: lib.rs  main.rs
crates/jet-tests/: Cargo.toml
crates/jet-tests/src/: lib.rs
crates/jet-tests/tests/: failure_paths.rs  local_workflow.rs  locking.rs  metadata_history.rs  remote_workflow.rs
crates/jet-tests/tests/common/: mod.rs
docs/: admin-auth.md  benchmark.md  codespaces.md  deploy-server.md  github-actions.md  local-commands.md  product-testing.md
examples/: auth.toml  com.nodfans.jet-server.plist  jet-server.service
scripts/: benchmark_remote_actions.sh  compare_local_lfs.sh  install.sh  product_flow_local.sh  product_flow_local_large.sh  product_flow_remote.sh  product_flow_remote_large.sh  start_codespace_server.sh
