[workspace]
members = [
    "crates/jet-core",
    "crates/jet-cli",
    "crates/jet-proto",
    "crates/jet-remote",
    "crates/jet-server",
    "crates/jet-tests",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
blake3 = { version = "1.8", features = ["rayon"] }
clap = { version = "4.5", features = ["derive"] }
fastcdc = "3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
rayon = "1"
memmap2 = "0.9"
bincode = "1.3"
toml = "0.8"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.12", features = ["transport"] }
tempfile = "3"
