[package]
name = "jet-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
fastcdc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
zstd.workspace = true
rayon.workspace = true
memmap2.workspace = true
bincode.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
