[package]
name = "jet-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
jet-core = { path = "../jet-core" }
jet-proto = { path = "../jet-proto" }

[dev-dependencies]
tempfile.workspace = true
